hphp/test/zend/good/ext/iconv/tests/iconv_basic.php.skipif
<?hh
extension_loaded('iconv') || die('skip');
function_exists('iconv') || die("skip iconv() is not available in this build");
