hphp/test/zend/bad/ext/mbstring/tests/mb_split.php.skipif
<?php
extension_loaded('mbstring') or die('skip mbstring not available');
function_exists('mb_split') or die("skip mb_split() is not available in this build");
?>